--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html,body{
     background-color: rgb(55, 3, 59);
 
 }
-header{
+.cabecalho{
     width: 100%;
     height: 7em;
     display: flex;
@@ -161,5 +161,83 @@ h1{
 p{
     font-size: 2em;
 }
+.contatos{
+    width: 100%;
+    height: 85%;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 1em;
+    background-color: rgb(119, 183, 255);
+    color: black;
+    border: rgb(55, 3, 59) solid;
+
+
+}
+
+.contatos section{
+    width: 50%;
+    height: 100%;
+}
+
+
+.botoess{
+    width: 30%;
+    height: 40%;
+    padding: 15px;
+    background-color: rgb(92, 92, 92);
+    border: 0;
+    color: rgb(255, 255, 255);
+    border-radius: 15px;
+    box-shadow: 0 0 0.7em rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2vw;
+    
+}
+
+.botoess button{
+    width: 50% ;
+    height: 25%;
+    margin-bottom: 0.5vw;
+    border-radius: 15px;
+    background-color: rgb(100, 255, 255);
+    transition-duration: 0.8s;
+}
+
+
+.botoess button:hover{
+    background-color: orangered;
+    transition-duration: 0.8s;
+}
+
+.contatos header{
+    width: 100%;
+    
+
+
+}
+.contatos form{
+    display: flex;
+    flex-direction: column;
+
+}
+.contatos input{
+    width: 70%;
+    border: 2px rgb(211, 211, 211) solid;
+    background-color: white;
+    color: white;
+    height: 30px;
+    padding: 5px;
+    font-size: 0.9cm;
+    border-radius: 5px;
+    margin-top: 1vw;
+
+
+}
+
 
 
